_css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

$header-background-invert: 0%;
@import "user_vars";

// Our variables 
$base-font-family: 'Open Sans', Helvetica, Arial, sans-serif;
//original $base-font-size = .95em, $small-font-size:  $base-font-size * 0.875
$base-font-size:   1.15em;             
$small-font-size:  $base-font-size * 0.90;
$base-line-height: 1.5;

// original $spacing-unit = 30px 
$spacing-unit:     20px;

$text-color:       #3D4952;
$background-color: #fdfdfd;
$brand-color:      $primary-color;
// $gameday-sky: #109dc0;
$clemson-purple:      $header-color;
$clemson-orange:      $accent-color;


$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);


// Width of the content area
$content-width:    1220px;

$on-palm:          600px;
$on-laptop:        1220px;


// Using media queries with like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }
@mixin media-query($device) {
    @media screen and (max-width: $device) {
        @content;
    }
}


// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "header",
	    "mobile-header",
        "base",
        "layout",
        "syntax-highlighting",
	    "fancy-image"
;

